@@ -1,6 +1,7 @@
 #include <string>
 #if !defined (STLPORT) || !defined (_STLP_USE_NO_IOSTREAMS)
 #include <sstream>
+#include <vector>
 #include <iterator>
 
 #include "cppunit/cppunit_proxy.h"
@@ -9,34 +10,28 @@
 using namespace std;
 #endif
 
-//
-// TestCase class
-//
 class IoiterTest : public CPPUNIT_NS::TestCase
 {
   CPPUNIT_TEST_SUITE(IoiterTest);
   CPPUNIT_TEST(ioiter_test);
+  CPPUNIT_TEST(assign_test);
+  CPPUNIT_TEST(assign2_test);
   CPPUNIT_TEST_SUITE_END();
 
 protected:
   void ioiter_test();
+  void assign_test();
+  void assign2_test();
 };
 
 CPPUNIT_TEST_SUITE_REGISTRATION(IoiterTest);
 
-//
-// tests implementation
-//
 void IoiterTest::ioiter_test()
 {
-//#ifdef MAIN
-//  cout << "Results of ioiter: " << endl;
-//#endif
 
   char c;
   char *pc;
   char *strorg = "abcd";
-  // string expected( "abcd" );
   string tmp;
 
   string objStr(strorg);
@@ -45,55 +40,25 @@ void IoiterTest::ioiter_test()
   istringstream objIStrStrm2(objStr);
   istringstream objIStrStrm3(objStr);
 
-//#ifdef MAIN
-//  cout << "plain C-string postfix increment operator and indirection: ";
-//#endif
-
   pc = strorg;
   string::size_type sz = strlen(strorg);
   string::size_type i;
   for ( i = 0; i < sz; ++i ) {
     c = *pc++;
     tmp += c;
-//#ifdef MAIN
-//    cout << c;
-//#endif
   }
-//#ifdef MAIN
-//  cout << " ... " << ( tmp == expected ? "pass" : "fail" ) << endl;
-//#else
-  // res = tmp == expected ? 0 : -1;
   CPPUNIT_ASSERT( tmp == "abcd" );
-//#endif
-
-//#ifdef MAIN
-//  cout << "postfix increment operator and indirection: ";
-//#endif
 
   istreambuf_iterator<char, char_traits<char> > objIStrmbIt1( objIStrStrm1.rdbuf() );
   istreambuf_iterator<char, char_traits<char> > end;
-
-  // objIStrmbIt1 != end;
 
   tmp.clear();
 
   for ( i = 0; i < sz /* objIStrmbIt1 != end */; ++i ) {
     c = *objIStrmbIt1++;
     tmp += c;
-//#ifdef MAIN
-//    cout << c;
-//#endif
   }
-//#ifdef MAIN
-//  cout << " ... " << ( tmp == expected ? "pass" : "fail" ) << endl;
-//#else
-//  res = tmp == expected ? 0 : -1;
-//#endif
   CPPUNIT_ASSERT( tmp == "abcd" );
-
-//#ifdef MAIN
-//  cout << "indirection, then postfix increment operator: ";
-//#endif
 
   tmp.clear();
 
@@ -101,39 +66,45 @@ void IoiterTest::ioiter_test()
   for ( i = 0; i < sz; ++i ) {
     c = *objIStrmbIt2;
     tmp += c;
-//#ifdef MAIN
-//    cout << c;
-//#endif
     objIStrmbIt2++;
   }
-//#ifdef MAIN
-//  cout << " ... " << ( tmp == expected ? "pass" : "fail" ) << endl;
-//#else
-//  res = tmp == expected ? 0 : -1;
-//#endif
   CPPUNIT_ASSERT( tmp == "abcd" );
 
   tmp.clear();
-
-//#ifdef MAIN
-//  cout << "compare, then postfix increment operator and indirection: ";
-//#endif
 
   istreambuf_iterator<char, char_traits<char> > objIStrmbIt3( objIStrStrm3.rdbuf() );
 
   while ( objIStrmbIt3 != end ) {
     c = *objIStrmbIt3++;
     tmp += c;
-//#ifdef MAIN
-//    cout << c;
-//#endif
   }
-//#ifdef MAIN
-//  cout << " ... " << ( tmp == expected ? "pass" : "fail" ) << endl;
-//#else
-//  res = tmp == expected ? 0 : -1;
-//#endif
   CPPUNIT_ASSERT( tmp == "abcd" );
+}
+
+void IoiterTest::assign_test()
+{
+  stringstream s( "1234567890" );
+  vector<char> v;
+
+  v.assign( istreambuf_iterator<char>(s), istreambuf_iterator<char>() );
+  CPPUNIT_CHECK( v.size() == 10 );
+  if ( v.size() == 10 ) {
+    CPPUNIT_CHECK( v[0] == '1' );
+    CPPUNIT_CHECK( v[9] == '0' );
+  }
+}
+
+void IoiterTest::assign2_test()
+{
+  stringstream s( "1234567890" );
+  vector<char> v;
+
+  v.assign( istreambuf_iterator<char>(s.rdbuf()), istreambuf_iterator<char>() );
+  CPPUNIT_CHECK( v.size() == 10 );
+  if ( v.size() == 10 ) {
+    CPPUNIT_CHECK( v[0] == '1' );
+    CPPUNIT_CHECK( v[9] == '0' );
+  }
 }
 
 #endif
